# builder

./: .gitignore  CMakeLists.txt  stylua.toml
config/: build_config.sh
scripts/: build_linux.sh  fetch_dependencies.sh
src/: main.cpp
